...
                  NotesList(
                    filter: filter,
                  ),
                ],
              ),
        floatingActionButton: FloatingActionButton(
          key: const ValueKey('Floating'),
          onPressed: () => GetIt.I<Nav>().gotoCreateTask(),
          child: const Icon(Icons.add),
        ),
      ),
    );
  }
...
